# HomeAnalyzer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
config/cmake/: stm32f207.cmake
config/cmsis_os/: cmsis_os2.c
config/hal/: pinout.h  stm32f2xx_hal_conf.h  system_stm32f2xx.c
config/lwip/: lwipopts.h
config/lwip/system/arch/: sys_arch.h
config/stm/: stm32f2.svd
include/led/: led.hpp
include/logger/: logger.h
include/lwip/app/: lwip.h
include/serial/: serial.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  main.cpp  stm32f2xx_it.c
src/led/: CMakeLists.txt  led.cpp
src/logger/: CMakeLists.txt  logger.c
src/lwip/: CMakeLists.txt
src/lwip/app/: lwip.c
src/serial/: CMakeLists.txt  serial.cpp
